added our content component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'components/madlib_form';
+@import 'components/madlib_content';
 @import 'header';
 
 
